# Schemas

./: pyproject.toml
.github/workflows/: publish_pypi.yml
src/pfcschemas/: __init__.py  maninfo.py  positioning.py  sdef.py
src/pfcschemas/utils/: enum.py
src/schemas/: __init__.py  ajson.py  aresti.py  fcj.py  ma.py  maninfo.py  positioning.py  sinfo.py
tests/: test_position.py
tests/data/: fc_json.json
